Fix: Fix bug regarding placement of button bar
Previously, the button bar would appear below the pin image whenever a pin image is moving pass the button bar. Updated ItemsButtonBar.css by providing a z-index of 2 to place the button bar in front of the pin image.

--- a/to_do_list/src/components/ItemsButtonBar/ItemsButtonBar.css
+++ b/to_do_list/src/components/ItemsButtonBar/ItemsButtonBar.css
@@ -10,4 +10,5 @@
     left: 50%;
     bottom: 0%;
     transform: translate(-50%, 0%);
+    z-index: 2;
 }
